--- a/SkyeClip.vbproj
+++ b/SkyeClip.vbproj
@@ -11,6 +11,9 @@
     <ProductVersion>1.0.0.0</ProductVersion>  
 	<FileVersion>1.0.0.0</FileVersion>
 	<Version>1.0.0</Version>
+	 
+	<!-- Suppress assembly binding conflict warnings -->
+	<NoWarn>MSB3277</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -30,11 +33,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3650.58" />
     <PackageReference Include="SkyeLibrary" Version="1.3.27" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
   </ItemGroup>
 
-  <ItemGroup>
+	<ItemGroup>
     <Compile Update="My Project\Resources.Designer.vb">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
